<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dbg">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
 <ImageView
        android:id="@+id/ImageView1"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_weight="0"
        android:background="@drawable/text" 
        android:contentDescription="@string/menu_home"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"/>
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:textColor="@color/grey"
        android:ems="10"
        android:hint="@string/hint_mobile_number"
        android:inputType="textEmailAddress" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="3">
    	<Button
        	android:id="@+id/btnExit"
        	android:layout_width="125dp"
        	android:layout_height="50dp"
        	android:layout_marginLeft="20dp"
        	android:background="@drawable/all_button_selector"
        	android:text="@string/btn_exit"
        	android:textColor="@color/grey"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentLeft="true"
        	android:textStyle="bold" />
    	<Button
    	    android:id="@+id/btnContinue"
			android:layout_width="125dp"
			android:layout_height="50dp"
			android:layout_marginRight="20dp"
        	android:background="@drawable/all_button_selector"
        	android:text="@string/btn_continue"
        	android:textColor="@color/grey"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentRight="true"
        	android:textStyle="bold" />
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"/>

</LinearLayout>