<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dbg" >
    
    
    <EditText
        android:id="@+id/editTextVerificationCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:textColor="@color/grey"
        android:hint="@string/hint_verification_code"
        android:inputType="number"
        android:layout_marginTop="50dp" />

    <requestFocus />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editTextVerificationCode"
        android:ems="10"
        android:textColor="@color/grey"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:paddingTop="0dp" 
        android:layout_marginTop="15dp"/>
    
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/editTextFirstName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:text="@string/btn_finish" 
        android:background="@drawable/all_button_selector"/>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/btnContinue"
        android:layout_alignBottom="@+id/btnContinue"
        android:layout_alignLeft="@id/editTextFirstName"
        android:layout_marginLeft="30dp"
        android:text="@string/btn_exit" 
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@drawable/all_button_selector"/>
    
    <!-- <Button
        android:id="@+id/btnSupport"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btnContinue"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/btn_support" 
        android:background="@drawable/all_button_selector"/> -->

</RelativeLayout>