<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dbg">
    
	<TextView  
	    android:id="@+id/audio_text"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:gravity="center"
	    android:textStyle="bold"
	    android:textSize="17sp"
	    android:text="Record Audio Clip to Share"/>
	
	<Chronometer
        android:id="@+id/chronometer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="60sp"
        android:layout_below="@id/audio_text"
        android:text="Chronometer" />
	
	
	<Button
        android:id="@+id/btn_select_audio"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/chronometer1"
        android:layout_alignParentRight="true"
        android:text="@string/btn_start_recording" 
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/grey"
        android:background="@drawable/all_button_selector"/>
	
	<Button
        android:id="@+id/btnSend"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_select_audio"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/btn_send" 
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:textColor="@color/grey"
        android:background="@drawable/all_button_selector"/>
    
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_select_audio"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:text="@string/btn_cancel" 
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:visibility="invisible"
        android:background="@drawable/all_button_selector"/>


		
</RelativeLayout>
